--- a/frontend/admin-register.html
+++ b/frontend/admin-register.html
@@ -65,7 +65,7 @@
               alert("Problem in input field.");
             }
           } catch (err) {
-            alert(err.response.data.message)
+            alert(err.response.data.message);
           }
         }
       }
