--- a/frontend/customer-register.html
+++ b/frontend/customer-register.html
@@ -66,7 +66,7 @@
               alert("Problem in input field.");
             }
           } catch (err) {
-            console.log(err);
+            alert(err.response.data.message)
           }
         }
       }
